@@ -1,3 +1,8 @@
+Fri Feb  5 20:43:11 CET 2016
+	Fixed testsuite compile warning on W32.
+	Added check test for triggering poll() on
+	listen socket. -EG
+
 Thu Feb  4 11:38:11 CET 2016
 	Added some buffer overrun protection.
 	Fixed handling of misformed URI with spaces. -EG
